--- a/.github/workflows/trigger_dark_mode.yml
+++ b/.github/workflows/trigger_dark_mode.yml
@@ -34,6 +34,8 @@ jobs:
     needs: init
     env:
       TRIGGER_TIME: ${{ needs.init.outputs.trigger_darkmode }}
+      LIGHT_KEY: start_light
+      DARK_KEY: start_dark
       HOUR: ${{ needs.init.outputs.hour }}
 
     if: ${{ needs.init.outputs.trigger_darkmode != null }}
@@ -42,7 +44,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Disable dark mode
-      if: ${{ env.HOUR >= env.TRIGGER_TIME[0] && env.HOUR <= env.TRIGGER_TIME[1] }}  
+      if: ${{ env.HOUR >= env.TRIGGER_TIME[LIGHT_KEY] && env.HOUR <= env.TRIGGER_TIME[DARK_KEY] }}  
       uses: fjogeleit/yaml-update-action@main
       with:
         valueFile: '_config.yml'
@@ -52,7 +54,7 @@ jobs:
         message: 'Disable Dark Mode.'
     
     - name: Enable dark mode
-      if: ${{ env.HOUR < env.TRIGGER_TIME[0] || env.HOUR > env.TRIGGER_TIME[1] }}  
+      if: ${{ env.HOUR < env.TRIGGER_TIME[LIGHT_KEY] || env.HOUR > env.TRIGGER_TIME[DARK_KEY] }}  
       uses: fjogeleit/yaml-update-action@main
       with:
         valueFile: '_config.yml'
