--- a/.github/workflows/trigger_dark_mode.yml
+++ b/.github/workflows/trigger_dark_mode.yml
@@ -44,7 +44,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Disable dark mode
-      if: ${{ env.HOUR >= env.TRIGGER_TIME[LIGHT_KEY] && env.HOUR <= env.TRIGGER_TIME[DARK_KEY] }}  
+      if: ${{ env.HOUR >= env.TRIGGER_TIME[env.LIGHT_KEY] && env.HOUR <= env.TRIGGER_TIME[env.DARK_KEY] }}  
       uses: fjogeleit/yaml-update-action@main
       with:
         valueFile: '_config.yml'
@@ -54,7 +54,7 @@ jobs:
         message: 'Disable Dark Mode.'
     
     - name: Enable dark mode
-      if: ${{ env.HOUR < env.TRIGGER_TIME[LIGHT_KEY] || env.HOUR > env.TRIGGER_TIME[DARK_KEY] }}  
+      if: ${{ env.HOUR < env.TRIGGER_TIME[env.LIGHT_KEY] || env.HOUR > env.TRIGGER_TIME[env.DARK_KEY] }}  
       uses: fjogeleit/yaml-update-action@main
       with:
         valueFile: '_config.yml'
