--- a/.github/workflows/trigger_dark_mode.yml
+++ b/.github/workflows/trigger_dark_mode.yml
@@ -55,10 +55,11 @@ jobs:
     
     - name: Enable dark mode
       if: ${{ env.HOUR < env.TRIGGER_TIME[env.LIGHT_KEY] || env.HOUR > env.TRIGGER_TIME[env.DARK_KEY] }}  
-      uses: fjogeleit/yaml-update-action@main
-      with:
-        valueFile: '_config.yml'
-        propertyPath: 'darkmode'
-        value: "!!bool 'true'"
-        commitChange: true
-        message: 'Enable Dark Mode.'
+      run: echo ${{ env.TRIGGER_TIME[env.LIGHT_KEY] }}
+      #uses: fjogeleit/yaml-update-action@main
+      #with:
+       # valueFile: '_config.yml'
+       # propertyPath: 'darkmode'
+       # value: "!!bool 'true'"
+       # commitChange: true
+       # message: 'Enable Dark Mode.'
