--- a/.github/workflows/trigger_dark_mode.yml
+++ b/.github/workflows/trigger_dark_mode.yml
@@ -61,21 +61,25 @@ jobs:
         echo "START_DARK=${{ steps.darkmode-time.outputs.data }}" >> $GITHUB_ENV
 
     - name: Disable dark mode
-      if: ${{ env.HOUR >= env.START_LIGHT && env.HOUR <= env.START_DARK }}  
-      uses: fjogeleit/yaml-update-action@main
-      with:
-        valueFile: '_config.yml'
-        propertyPath: 'darkmode'
-        value: "!!bool 'false'"
-        commitChange: true
-        message: 'Disable Dark Mode.'
+      run: |
+        echo $HOUR 
+        echo $START_LIGHT 
+        echo $START_DARK
+    #   if: ${{ env.HOUR >= env.START_LIGHT && env.HOUR <= env.START_DARK }}  
+    #   uses: fjogeleit/yaml-update-action@main
+    #   with:
+    #     valueFile: '_config.yml'
+    #     propertyPath: 'darkmode'
+    #     value: "!!bool 'false'"
+    #     commitChange: true
+    #     message: 'Disable Dark Mode.'
     
-    - name: Enable dark mode
-      if: ${{ env.HOUR < env.START_LIGHT || env.HOUR > env.START_DARK }}  
-      uses: fjogeleit/yaml-update-action@main
-      with:
-       valueFile: '_config.yml'
-       propertyPath: 'darkmode'
-       value: "!!bool 'true'"
-       commitChange: true
-       message: 'Enable Dark Mode.'
+    # - name: Enable dark mode
+    #   if: ${{ env.HOUR < env.START_LIGHT || env.HOUR > env.START_DARK }}  
+    #   uses: fjogeleit/yaml-update-action@main
+    #   with:
+    #    valueFile: '_config.yml'
+    #    propertyPath: 'darkmode'
+    #    value: "!!bool 'true'"
+    #    commitChange: true
+    #    message: 'Enable Dark Mode.'
