--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ trigger_darkmode:
   start_dark: 15 # To start darkmode (hour)
 
 
-last_updated_time: 15th Dec 2022
+last_updated_time: null
 
 github_username: alirezadizaji
 linkedin_username: alireza-dizaji-43a634194
