--- a/.github/workflows/trigger_dark_mode.yml
+++ b/.github/workflows/trigger_dark_mode.yml
@@ -70,12 +70,12 @@ jobs:
         commitChange: true
         message: 'Disable Dark Mode.'
     
-    - name: Enable dark mode
-      if: ${{ env.HOUR < env.START_LIGHT || env.HOUR > env.START_DARK }}  
-      uses: fjogeleit/yaml-update-action@main
-      with:
-       valueFile: '_config.yml'
-       propertyPath: 'darkmode'
-       value: "!!bool 'true'"
-       commitChange: true
-       message: 'Enable Dark Mode.'
+    # - name: Enable dark mode
+     # if: ${{ env.HOUR < env.START_LIGHT || env.HOUR > env.START_DARK }}  
+     # uses: fjogeleit/yaml-update-action@main
+     # with:
+     #  valueFile: '_config.yml'
+     #  propertyPath: 'darkmode'
+     #  value: "!!bool 'true'"
+     #  commitChange: true
+     #  message: 'Enable Dark Mode.'
