--- a/.github/workflows/trigger_dark_mode.yml
+++ b/.github/workflows/trigger_dark_mode.yml
@@ -28,6 +28,8 @@ jobs:
     - name: Get current time
       uses: josStorer/get-current-time@v2.0.2
       id: current-time
+      with:
+        format: HH
 
   trigger-darkmode:
     runs-on: ubuntu-latest
