--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ name: Alireza Dizaji
 email: alirezadizaji24@gmail.com
 darkmode: false
 trigger_darkmode:
-  start_light: 9
-  start_dark: 15
+  start_light: '09'
+  start_dark: '15'
 last_updated_time: 15th Dec 2022
 github_username: alirezadizaji
 linkedin_username: alireza-dizaji-43a634194
