--- a/.github/workflows/trigger_dark_mode.yml
+++ b/.github/workflows/trigger_dark_mode.yml
@@ -63,10 +63,7 @@ jobs:
         echo "START_DARK=${{ steps.darkmode-time.outputs.data }}" >> $GITHUB_ENV
 
     - name: Disable dark mode
-      env:
-        HOUR: 10
-        START_LIGHT: 19
-      if: ${{ env.HOUR < env.START_LIGHT }} 
+      if: ${{ env.HOUR >= env.START_LIGHT && env.HOUR <= env.START_DARK }} 
       uses: fjogeleit/yaml-update-action@main
       with:
         valueFile: '_config.yml'
@@ -75,12 +72,12 @@ jobs:
         commitChange: true
         message: 'Disable Dark Mode.'
     
-    # - name: Enable dark mode
-     # if: ${{ env.HOUR < env.START_LIGHT || env.HOUR > env.START_DARK }}  
-     # uses: fjogeleit/yaml-update-action@main
-     # with:
-     #  valueFile: '_config.yml'
-     #  propertyPath: 'darkmode'
-     #  value: "!!bool 'true'"
-     #  commitChange: true
-     #  message: 'Enable Dark Mode.'
+    - name: Enable dark mode
+      if: ${{ env.HOUR < env.START_LIGHT || env.HOUR > env.START_DARK }} 
+     uses: fjogeleit/yaml-update-action@main
+     with:
+      valueFile: '_config.yml'
+      propertyPath: 'darkmode'
+      value: "!!bool 'true'"
+      commitChange: true
+      message: 'Enable Dark Mode.'
