--- a/.github/workflows/trigger_darkmode.yml
+++ b/.github/workflows/trigger_darkmode.yml
@@ -44,7 +44,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Set current date as env variable
-      run: echo "HOUR=$('%H')" >> $GITHUB_ENV
+      run: echo "HOUR=$(date + '%H')" >> $GITHUB_ENV
     
     - name: Get light mode start time
       uses: jbutcher5/read-yaml@1.6
