--- a/.github/workflows/trigger_darkmode.yml
+++ b/.github/workflows/trigger_darkmode.yml
@@ -12,7 +12,6 @@ jobs:
 
     outputs:
       trigger_darkmode: ${{ steps.trigger-darkmode.outputs.data }}
-      hour: ${{ steps.current-time.outputs.hour }}
 
     steps:
     - name: Checkout 🛎️
@@ -25,12 +24,6 @@ jobs:
         file: '_config.yml'
         key-path: '["trigger_darkmode"]'
 
-    - name: Get current time
-      uses: josStorer/get-current-time@v2.0.2
-      id: current-time
-      with:
-        format: HH
-
   trigger-darkmode:
     runs-on: ubuntu-latest
     needs: init
@@ -42,10 +35,7 @@ jobs:
     steps:
     - name: Checkout 🛎️
       uses: actions/checkout@v3
-    
-    - name: Set current date as env variable
-      run: echo "HOUR=$(date + '%H')" >> $GITHUB_ENV
-    
+   
     - name: Get light mode start time
       uses: jbutcher5/read-yaml@1.6
       id: lightmode-time
@@ -64,6 +54,7 @@ jobs:
       run: |
         echo "START_LIGHT=${{ steps.lightmode-time.outputs.data }}" >> $GITHUB_ENV
         echo "START_DARK=${{ steps.darkmode-time.outputs.data }}" >> $GITHUB_ENV
+        echo "HOUR=$(date + '%H')" >> $GITHUB_ENV
 
     - name: Disable dark mode
       if: ${{ env.HOUR >= env.START_LIGHT && env.HOUR <= env.START_DARK }} 
