--- a/.github/workflows/trigger_darkmode.yml
+++ b/.github/workflows/trigger_darkmode.yml
@@ -54,8 +54,10 @@ jobs:
       run: |
         echo "START_LIGHT=${{ steps.lightmode-time.outputs.data }}" >> $GITHUB_ENV
         echo "START_DARK=${{ steps.darkmode-time.outputs.data }}" >> $GITHUB_ENV
-        echo "HOUR=$(date + '%H')" >> $GITHUB_ENV
-
+        echo "NOW=$(date + '%H')" >> $GITHUB_ENV
+    - name: Hello
+      run: |
+        echo $NOW
     - name: Disable dark mode
       if: ${{ env.HOUR >= env.START_LIGHT && env.HOUR <= env.START_DARK }} 
       uses: fjogeleit/yaml-update-action@main
