--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -16,7 +16,7 @@
 
 - company: CommaMed (formerly known as AI-Med)
   job_title: R&D Scientist
-  dates: April 2021 - Present
+  dates: April 2021 - December 2022
   description: |
     For more than a year and a half, I have been collaborating with the CommaMed start-up, 
     which our goal is to both accelerate and increase the accuracy of diagnosis 
