--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ about_content: |
   focus is to solve and enhance current problems of medical imaging, particularly 
   mammography screening, under the supervision of Prof. Rabiee. I also have 1 year of experience 
   in the Reinforcement Learning field working on agent movement within a maze using 
-  contrastive learning methods. My research interests are **Learning on Graphs** and **Graph Neural Networks**, 
+  contrastive learning methods. My research interests are **Geometric Deep Learning**, 
   **Explainable Machine Learning**, and **Optimization**.
 more_content: |
   Alongside my interests in science and technology, some of my other hobbies are:
