--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ darkmode: false
 trigger_darkmode:
   start_light: '05'
   start_dark: '16'
-last_updated_time: 10th Jan 2023
+last_updated_time: 8th Jan 2023
 github_username: alirezadizaji
 linkedin_username: alireza-dizaji-43a634194
 googlescholar_username: rTdeQaMAAAAJ
@@ -24,8 +24,8 @@ about_content: |
   focus is to solve and enhance current problems of medical imaging, particularly 
   mammography screening, under the supervision of Prof. Rabiee. I also have 1 year of experience 
   in the Reinforcement Learning field working on agent movement within a maze using 
-  contrastive learning methods. My research interests are **Geometric Deep Learning**, 
-  **Explainable Machine Learning**, and **Optimization**.
+  contrastive learning methods. My research interests are **Computer Vision** and **Explainable Machine Learning**, **Geometric Deep Learning**
+  , and **Optimization**.
 more_content: |
   Alongside my interests in science and technology, some of my other hobbies are:
     - Reading books: I am a big fan of Fantasy books, and mostly
