--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ more_content: |
     spent my leisure time reading them. So far, I have read the <i> Hobbit </i>, <i> Lord of the Rings </i> (**My most favorite one**),
     and <i> Harry Potter </i> series in English, and they (particularly the second one) have significantly 
     changed my attitude towards fate, reasons behind our being, and our path in our lives; 
-    Indeed after reading them, I experienced how great books could marvelously direct your thought, 
-    and I always ask for or suggest such books preferably in the fantasy genre.
+    Indeed after reading them, I experienced how great books could marvelously direct your thought. Currently, I am reading <i> LOTR </i>'s
+        spinoff books, <i> The Silmarillion </i> and <i> Unfinished tales </i>.
     - Watching movies
     - Travelling and nature
 content:
