--- a/_config.yml
+++ b/_config.yml
@@ -31,11 +31,11 @@ about_content: |
 more_content: |
   Alongside my interests in science and technology, some of my other hobbies are:
     - Reading books: I am a big fan of Fantasy books, and mostly
-    spent my leisure time reading them. So far, I have read the <i> Hobbit </i>, <i> Lord of the Rings </i> (**My most favorite one**),
-    and <i> Harry Potter </i> series in English, and they (particularly the second one) have significantly 
-    changed my attitude towards fate, reasons behind our being, and our path in our lives; 
-    Indeed after reading them, I experienced how great books could marvelously direct your thought. Currently, I am reading <i> LOTR </i>'s
-        spinoff books, <i> The Silmarillion </i> and <i> Unfinished tales </i>.
+    spend my leisure time reading them in English. Sometimes I really feel sick of this world, and I'd like to put my mind away from it and live through the others. Besides, for me the most joyful and cheapest way of journeying is reading books:
+      - J.R.R Tolkien's Valar, Numenor, and Middle-earth history: I have read the <i> Silmarillion </i>, <i> Unfinished Tales </i>, <i> Hobbit </i>, and <i> Lord of the Rings </i> series of sir Tolkien, traveling through the time, and understanding many things
+      like the instinct consequences of envying, seeking the immortality, and forging evil wills. In addition, fates, reasons behind beings of all creatures, and our path in our lives. Seems like we are descendants of the Men, but I prefer to be from Eldar races :(.
+      - J.K. Rowling's Harry Potter series: I have read all seven books of the Harry Potter series, understanding again the consequences of seeking immortality, creating your own enemies by oppression, and the hidden power of Love.
+      - Andrzej Sapkowski's Witcher series: ...
     - Watching movies
     - Travelling and nature
 content:
@@ -121,11 +121,11 @@ content:
     content: |
       Alongside my interests in science and technology, some of my other hobbies are:
         - Reading books: I am a big fan of Fantasy books, and mostly
-        spent my leisure time reading them. So far, I have read the <i> Hobbit </i>, <i> Lord of the Rings </i> (**My most favorite one**)
-        and <i> Harry Potter </i> series in English, and they (particularly the second one) have significantly 
-        changed my attitude towards fate, reasons behind our being, and our path in our lives; 
-        Indeed after reading them, I experienced how great books could marvelously direct your thought. Currently, I am reading <i> LOTR </i>'s
-        spinoff books, <i> The Silmarillion </i> and <i> Unfinished tales </i>.
+        spend my leisure time reading them in English. Sometimes I really feel sick of this world, and I'd like to put my mind away from it and live through the others. Besides, for me the most joyful and cheapest way of journeying is reading books:
+          - J.R.R Tolkien's Valar, Numenor, and Middle-earth history: I have read the <i> Silmarillion </i>, <i> Unfinished Tales </i>, <i> Hobbit </i>, and <i> Lord of the Rings </i> series of sir Tolkien, traveling through the time, and understanding many things
+          like the instinct consequences of envying, seeking the immortality, and forging evil wills. In addition, fates, reasons behind beings of all creatures, and our path in our lives. Seems like we are descendants of the Men, but I prefer to be from Eldar races :(.
+          - J.K. Rowling's Harry Potter series: I have read all seven books of the Harry Potter series, understanding again the consequences of seeking immortality, creating your own enemies by oppression, and the hidden power of Love.
+          - Andrzej Sapkowski's Witcher series: ...
         - Watching movies
         - Travelling and nature
 footer_show_references: false
