--- a/_config.yml
+++ b/_config.yml
@@ -17,24 +17,31 @@ about_content: |
 
   (**PLEASE NOTE: Sharif CE mail server (*@ce.sharif.edu) has been down since mid-January 2023 without giving any precautions. please be in contact with me via my Gmail or Yahoo.**)
 
-  My name is Alireza Dizaji and I have recently graduated as a Bachelor of Science student
+  My name is Alireza Dizaji and I graduated as a Bachelor of Science student
   at the **Sharif University of Technology**, **Computer Engineering** field. 
   I have +3 years of research experience in the fields of computer vision and machine learning; 
-  For the last seven months, I was a research intern at the **Technical University of Munich** 
+  For the last four months, under the supervision of Prof. Rueckert at **Technical University of Munich**, As an Undergrad RA 
+  I have been working on Gait-disorder recognition using a spatio-temporal human-skeleton graph, at the intersection of geometric deep learning and semi-supervised learning.
+  From May-Nov 2022, I was a research intern at the **Technical University of Munich** 
   working on explainability in graph neural networks under the co-supervision of Prof. Navab and 
-  Prof. Rueckert. For +1.5 years, I am working as an R&D scientist at AI-Med where our 
-  focus is to solve and enhance current problems of medical imaging, particularly 
-  mammography screening, under the supervision of Prof. Rabiee. I also have 1 year of experience 
+  Prof. Rueckert. For +1.5 years, I was an R&D scientist at AI-Med where on the ML academic side, our main contribution was to tackle the current 
+  issues of pooling layers and bring a novel attention-based pooling layer by using weakly-supervised learning, under the supervision of Prof. Rabiee. I also have 1 year of experience 
   in the Reinforcement Learning field working on agent movement within a maze using 
-  contrastive learning methods. My research interests are **Computer Vision** and **Explainable Machine Learning**, **Geometric Deep Learning**
-  , and **Optimization**.
+  contrastive learning methods. My research interests are **Computer Vision**, **Geometric Deep Learning**, **Explainable Machine Learning**, and **Causality**.
 more_content: |
   Alongside my interests in science and technology, some of my other hobbies are:
     - Reading books: I am a big fan of Fantasy books, and mostly
-    spend my leisure time reading them in English. Sometimes I really feel sick of this world, and I'd like to put my mind away from it and live through the others. Besides, for me the most joyful and cheapest way of journeying is reading books:
-      - J.R.R Tolkien's Valar, Numenor, and Middle-earth history: I have read the <i> Silmarillion </i>, <i> Unfinished Tales </i>, <i> Hobbit </i>, and <i> Lord of the Rings </i> series of sir Tolkien, traveling through the time, and understanding many things
-      like the instinct consequences of envying, seeking the immortality, and forging evil wills. In addition, fates, reasons behind beings of all creatures, and our path in our lives. Seems like we are descendants of the Men, but I prefer to be from Eldar races :(.
-      - J.K. Rowling's Harry Potter series: I have read all seven books of the Harry Potter series, understanding again the consequences of seeking immortality, creating your own enemies by oppression, and the hidden power of Love.
+    spend my leisure time reading them in English. Sometimes I really feel sick of this world, and I'd like to put my mind away from it and live through the other ones. Besides, for me, the most joyful and cheapest way of journeying is reading books. Here I bring what was the main point of the Author in his/her books:
+      - J.R.R Tolkien's Valar, Numenor, and Middle-earth history: I read the <i> Silmarillion </i>, <i> Unfinished Tales </i>, <i> Hobbit </i>, and <i> Lord of the Rings </i> series of sir Tolkien, following his universe, and perceiving many things
+      like the instinct consequences of envying, seeking the immortality, and how evil wills finish at the end. In addition, what are our fates, the reasons behind our being, and the paths we would take in our lives, which all lead to a single target. 
+      Besides, Sir Tolkien represented that a very important factor to create a strong group is by using the wisdom and knowledge of experienced people (Gandalf the Grey, Galadriel, Theoden the King, ...) alongside the energy and 
+      efforts of youth (Hobbits). And in all stages of your life counseling could highly assist you in taking better paths. Eru lluvatar, the father of all, determined that Men race should rule the earth after Sauron's doom, so this means we are descendants of the Men, 
+      but I wish that we all were from Eldar races because I believe some of us really need more wisdom in our choices.
+      - J.K. Rowling's Harry Potter series: I read all seven books of miss Rowling, and I believe that besides strong imagination and a very friendly world, miss Rowling tried to depict that the only reason for anyone who seeks immortality is to have huge power over all beings. 
+      And this is the darkest goal because it is possible only by leaving your pure and single soul, and this could be done only by one action: Split your soul by murdering. By doing so (Like murdering Harry's parents), the seeker automatically creates his enemies 
+      and their motivations. You can never seek immortality without making your enemies, that's the point. And you can never perish your enemies because the pure LOVE (like between mother and son) creates an immense power inside them and you can not persist against it.
+      What's interesting is that Harry maintains this power, but in my opinion, he was very idiot most of the time :). Therefore (same as in Lord of The Rings) there must be people with high wisdom and knowledge (e.g. Dumbledore) to help you employ this motivation very delicately and efficiently. If there are no such people or leaders, 
+      then this motivation could also perish very easily because of your silliness.  
       - Andrzej Sapkowski's Witcher series: ...
     - Watching movies
     - Travelling and nature
